--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,11 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MIRNet-TFJS Example</title>
+
+  <link rel="icon" href="https://raw.githubusercontent.com/tensorflow/tfjs-website/master/source/favicon.ico">
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
@@ -19,12 +22,16 @@
       href="https://github.com/Rishit-dagli/MIRNet-TFJS">this repo</a> and leave a ⭐ if you like it!
   </h5>
   </p>
+
   <br><br>
+
   <form id="submitImage">
     <!--</form>action="/submit" method="post" enctype="multipart/form-data"> -->
     <input type="file" id="image" name="image" accept=".jpg,.jpeg,.png">
     <input type="submit" value="Submit">
   </form>
+
+  <br>
 
   <div id="displayImage"></div>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
@@ -36,6 +43,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
     integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
     crossorigin="anonymous"></script>
+
   <script src="js/upload.js"></script>
 </body>
 
